--- a/stretch1.html
+++ b/stretch1.html
@@ -25,6 +25,7 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
+      <!-- <div class="logo-holder"></div> -->
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </header>
 
