--- a/great-idea-website/stretch2.html
+++ b/great-idea-website/stretch2.html
@@ -8,6 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/stretch.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -15,7 +16,7 @@
 </head>
 
   <body>
-    <header>
+    <header class="stretch-header">
       <nav>
         <a href="#">Services</a>
         <a href="#">Product</a>
@@ -24,15 +25,15 @@
         <a href="#">About</a>
         <a href="#">Contact</a>
       </nav>
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      <!-- <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."> -->
     </header>
 
-    <section class="hero">
+    <section class="hero hero-stretch">
         <h1>Innovation <br> On <br> Demand</h1>
         <button>Get Started</button>
-        <img src="img/header-img.png" alt="Image of a code snippet.">
+        <!-- <img src="img/header-img.png" alt="Image of a code snippet."> -->
     </section>
-    <section class="info-section">
+    <section class="info-section info-section-stretch">
       <section class="inline-section inline-left first-row">
         <h3>Features</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
@@ -41,7 +42,7 @@
         <h3>About</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
       </section>
-        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+        <!-- <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen"> -->
       <section class="inline-section inline-left second-row">
         <h3>Services</h3>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
