--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,6 +15,7 @@
 </head>
 
   <body>
+    <!-- Header, Nav, Company Logo -->
     <header>
       <nav>
         <a href="#">Services</a>
@@ -26,12 +27,13 @@
       </nav>
       <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </header>
-
+    <!-- Hero Card -->
     <section class="hero">
         <h1>Innovation <br> On <br> Demand</h1>
         <button>Get Started</button>
         <img src="img/header-img.png" alt="Image of a code snippet.">
     </section>
+    <!-- Info section -->
     <section class="info-section">
       <section class="inline-section inline-left first-row">
         <h3>Features</h3>
@@ -39,6 +41,7 @@
       </section>
       <section class="inline-section first-row">
         <h3>About</h3>
+        <!-- Dividing image -->
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
       </section>
         <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
@@ -55,6 +58,7 @@
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
       </section>
     </section>
+    <!-- Footer -->
     <footer>
     <h3>Contact</h3>
     <address>
